2009-03-13  Mike Belshe  <mike@belse.com>

        Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=24580
        Fix query() to match KURL behavior.

        * platform/KURLGoogle.cpp:
        (WebCore::KURL::query): remove extra logic around question mark.

2009-03-13  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        Bug 24474: AX: in multi-body tables, asking for a cell at a specific coordinate can return nil
        https://bugs.webkit.org/show_bug.cgi?id=24474

        Test: platform/mac-snowleopard/accessibility/table-multi-bodies.html

        * page/AccessibilityTable.cpp:
        (WebCore::AccessibilityTable::cellForColumnAndRow):

2009-03-13  Jian Li  <jianli@chromium.org>

        Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=24589
        Upstream changes to V8 event listeners (Chromium r11133) in order to
        fix worker functionality break in Chromium.

        * bindings/v8/V8AbstractEventListener.cpp:
        (WebCore::V8AbstractEventListener::invokeEventHandler):
        (WebCore::V8AbstractEventListener::handleEvent):
        * bindings/v8/V8AbstractEventListener.h:
        * bindings/v8/V8WorkerContextEventListener.cpp:
        (WebCore::V8WorkerContextEventListener::handleEvent):

2009-03-13  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Timothy Hatcher.

        https://bugs.webkit.org/show_bug.cgi?id=24524
        Introduce ScriptObject and ScriptFunctionCall abstractions.

        * GNUmakefile.am: Added ScriptObject and ScriptFunctionCall to project.
        * WebCore.pro: Ditto.
        * WebCore.vcproj/WebCore.vcproj: Ditto.
        * WebCore.xcodeproj/project.pbxproj: Ditto.
        * WebCoreSources.bkl: Ditto.
        * bindings/js/ScriptFunctionCall.cpp: Added.
        * bindings/js/ScriptFunctionCall.h: Added.
        * bindings/js/ScriptObject.cpp: Added.
        * bindings/js/ScriptObject.h: Added.