@@ -1,3 +1,12 @@
+2009-03-13  Mike Belshe  <mike@belshe.com>
+
+        Reviewed by Dimitri Glazkov.
+
+        https://bugs.webkit.org/show_bug.cgi?id=24562
+        Add custom implementation for getCSSCanvasContext to V8 bindings.
+
+        * bindings/v8/custom/V8DocumentCustom.cpp: Added new method.
+
 2009-03-13  Mike Belshe  <mike@belse.com>
 
         Reviewed by Dimitri Glazkov.
